--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,8 @@
 		"docs/images/ScrS2.png": "kaONsbtNOrN0aloe03oIG7noMgfC1ym2SeSvYEkPZnA=",
 		"docs/images/ScrS3.png": "jW2zfAJlmQDdHKB3xw4MsMyayL5Ihfrxaw/e0na8Pno=",
 		"index.js": "u28+NjKPspRFFwJ3ayApWzoK8LxNOpW1QFb9Fvfmkj8=",
-		"mod.json": "AXK7l5mKDYHrgaF3tv21rO1Ep3eZJ74BHs0xEIyGle8=",
+		"LICENSE": "OXLcl0T2SZ8Pmy2/dmlvKuetivmyPd5m1q+Gyd+zaYY=",
+		"mod.json": "LvxD85G1HFE4nMtBA1q7wdoEfJ5f8tGXS1NIIkdXS+g=",
 		"node_modules/ws/browser.js": "AQ2kSt3qHYiytzJUDD8f0MvLKJJrlmI9TGQiLg6tLQ4=",
 		"node_modules/ws/index.js": "wrDJkFVApRrLJ2UjuwJO88Eb0RiwOpDZKWIIDr0H/sk=",
 		"node_modules/ws/lib/buffer-util.js": "2iCI3PqEe+KyagxP1GSA4qeHsxILys65hVVlS7ulNjE=",
@@ -51,7 +52,7 @@
 		"node_modules/ws/README.md": "QOBHWIg7f6A8jZAC2JYUJla5hS9dsPISulqoCkxIBmM=",
 		"package-lock.json": "/chEkc5eJ9d2RLH5OlwMUaYe8t8yDVUTl2GG4mpv3mk=",
 		"package.json": "5PqPWGH2hPqbFa15hN9zpFUTcpCfWyJgVUB5EmYReY4=",
-		"README.md": "Zp6AVvq+fsZIEM+4xz3lhI+Yiu7MN83oaoji79mHv5Y=",
+		"README.md": "2P6nzmKGBrXRs/9mWmbhiCEhwuKp6lH3lkXIwOcVH84=",
 		"savedData.json": "aeUpBLopjJwU1qnLuY92g10m3SydUptaNwr6017q0/8=",
 		"src/.gitignore": "LDOYFGbm8ecc8mD3f92TCtdI81wFSZpWpPonlDE2ZUY=",
 		"src/package-lock.json": "f+RIXz80LajXJJiVQs+Em0Bka2J61QPt4wQX6azrpvE=",
