--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "flatbuffers": "^1.12.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {}
