--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-dropdown-select": "^4.5.0",
     "react-json-view": "^1.19.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
