--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,46 @@
 {
 	"data": {
-		".gitignore": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
-		"build/asset-manifest.json": "DDJAid6WQ9AIZoeFvxu0/zZGWYw/Qu6E5afUxafjXSw=",
+		"build/asset-manifest.json": "M4ARR8uHgQRGe3v2nMy4l+hIoZy2xUz/Fi9X8DyKiQs=",
 		"build/clear.png": "EMi8lCG1yPUo9freoySoV86GeBe0DAq+0r/6gUYs5jU=",
 		"build/coherent.js": "bicG5AzEyWjkno/X7gXtCOsVj9WFyaPpdi1fNzbDAKg=",
 		"build/favicon.ico": "/u88R+ySYCcjyMBJb7iRZpFbeo0aAsRhhRvHemzVU9Y=",
-		"build/index.html": "Wh1aijJpLfNxzNPjSdWNDiNR0z8CzQY8PBXy5eatd2o=",
+		"build/index.html": "vgP75wLjtH0iyKi4cVBa8b75bjDf6tvNJWTGLQ9WBbc=",
 		"build/logo192.png": "w4Y5bscNs2CAdbX7+qxKscyqhroFpoqzk+xVHrZsPgA=",
 		"build/logo512.png": "nqT02nBQwMxAiSb2o5wlNiTpursdQ8eXfNghRFpgtGE=",
 		"build/manifest.json": "ULPYw5A68/eNhxuUVXqxT045yhkurKPSz6hjyGcnmhQ=",
 		"build/open.png": "7RCPKUTs1MjWJy0z08uVocRUHvZy/kjWwEtfRxbblzw=",
 		"build/play-pause.png": "REC8/UDM1d4VoAT1xcs8YEGP7uZyHx6j6fyztvMFt5I=",
-		"build/precache-manifest.ff221db48715f8080ad52c295bd97a0c.js": "dk4zu8s6JINutf2EGij7ooviDWGIuKPgqMju/EsrtNw=",
+		"build/precache-manifest.3970b65d468806b814b621fa58378c87.js": "dAqG730IaNfxYMo+wWE7Zihx3momJ7RheD9spuN2Exs=",
 		"build/robots.txt": "kNJLw79pisHhc3OVAimMzKcq3x9WT6sF9IS4xI0crdI=",
 		"build/save.png": "uGSdZ937GVS1TOlr3ofEFgxJZpxES9vo5FYhNvk6jzw=",
-		"build/service-worker.js": "2VXcUXsEnqhH0DBJWav82Bf21m56bvkiqj6KV3FC62U=",
+		"build/service-worker.js": "J+p/IJc/JnMCu05pnJhuYRJDkIYKliIUY/+d82SIJkE=",
 		"build/static/css/2.961577eb.chunk.css": "OIotx2MCuKov+Gb1fCTgjKgWrBjhIMwYXgEukz2a+80=",
 		"build/static/css/2.961577eb.chunk.css.map": "Ynoxzyqi3C9f/yB2TXXqsPqx4ebzRPDvBE8zxzx963w=",
-		"build/static/css/main.91fc7614.chunk.css": "7lx8W/fMPGHiRuBUZxDguFLFq4Asd6XTmxeGrH3QjNI=",
-		"build/static/css/main.91fc7614.chunk.css.map": "5D8iaiLFO4LpakSY+n1CnffdaK6P7ryWw5YQxQR0H6U=",
-		"build/static/js/2.4d32f491.chunk.js": "kCeMAgb/AA5O4Sa9Gi+10ElBMyE6OYeMAj+LUUnYwpc=",
-		"build/static/js/2.4d32f491.chunk.js.LICENSE.txt": "oR6PsATaXKk5QpmHkko0zX0xczEVpZbQdRiGDn25lv8=",
-		"build/static/js/2.4d32f491.chunk.js.map": "5nOunTeUMG7G9xSdMHq+F5XkmXWHQW9U5v9r9EZrH4Q=",
-		"build/static/js/main.1a3f460d.chunk.js": "A8ynfYVz+4D2zhNqOWVGZpiuzUqVvb1rN9aWGuOArfg=",
-		"build/static/js/main.1a3f460d.chunk.js.map": "RTi0mPOmw/asupAn+QPIRBjuXYrXvx+6YXwR0FqELO4=",
+		"build/static/css/main.12c499b0.chunk.css": "HrK7w1c2UNT24uv+sVG1vsploBXIOCCI1sLt++Wkzlg=",
+		"build/static/css/main.12c499b0.chunk.css.map": "2nHqgUWJLLKQpid68f/+d8n0MfmZ+R4xCYvU35gATsQ=",
+		"build/static/js/2.1c8dd748.chunk.js": "dN7gwoiSO0ZxLIZ74QYQZSSMKRRCyF6SZBFxOWdir1Q=",
+		"build/static/js/2.1c8dd748.chunk.js.LICENSE.txt": "z/eFMfdQI22YrxO02jD8wruOMy+TqHHLjQ93vDpQX/s=",
+		"build/static/js/2.1c8dd748.chunk.js.map": "rwfROICq4PwoFrE7XJ+488xbI2slcjoPOxQCw8fO3VU=",
+		"build/static/js/main.90d96379.chunk.js": "E774ZSbvE7bJnOYgT90AuQ72TzngqMrnCVgHgTnXfQY=",
+		"build/static/js/main.90d96379.chunk.js.map": "+60gOB8OIJ2qqtZBU23CqFER8XdzTvgHbVxUG2pRiUg=",
 		"build/static/js/runtime-main.577db28f.js": "GEUGHPuwDAw0z3PDx2xRm2qv/xNzUte2lvVIr0mr81c=",
 		"build/static/js/runtime-main.577db28f.js.map": "wgVAyZBVAJLONc+yCJB2xKQoMpJHJ2c7NqGNG282xNc=",
-		"defParser.js": "PPCszhqQQ2SkSSg7WiJB5ey2QJJhTSC/ytUCk79NISc=",
-		"docs/images/ScrS1.png": "oYWL8o8fDNw1/8ouVM4Wf1VqljIDX+/sxfdElbvvlAQ=",
-		"docs/images/ScrS2.png": "kaONsbtNOrN0aloe03oIG7noMgfC1ym2SeSvYEkPZnA=",
+		"docs/images/ScrS1.png": "f9KSjlswxb0Yqxi1p0ltlNGvmjrfMtvT2UKAn7FmNPg=",
+		"docs/images/ScrS2.png": "F+iWLpMOp0ADJz2Lr64RZgSnI5IIHY7yruVhp/G2fPk=",
 		"docs/images/ScrS3.png": "jW2zfAJlmQDdHKB3xw4MsMyayL5Ihfrxaw/e0na8Pno=",
-		"index.js": "x85ul2MWBF0g448l8ZaqPnDTpaJASN7Gh8N/jnszwYA=",
+		"index.js": "Rp9MeOAhrOirhWoTRMlrXWVyhmg7sgvuC+/Hlm+I7RI=",
+		"lib/defParser.js": "PPCszhqQQ2SkSSg7WiJB5ey2QJJhTSC/ytUCk79NISc=",
+		"lib/logSave.js": "4DkKCkpsk0nJgWEGUWevWlz4wBkCEDR43gQclSnAkzQ=",
+		"lib/packetLog.fbs": "faEeAF+wXthDpNbc2xrVY8VQxDWR3gx2xjxA0hJDes4=",
+		"lib/packetLog_generated.js": "AwiOnVq+wKNKF4Gv4PU01blm/Ph+A5CJblv9BxFoqSs=",
 		"LICENSE": "OXLcl0T2SZ8Pmy2/dmlvKuetivmyPd5m1q+Gyd+zaYY=",
+		"logs/.gitignore": "5JvfjAExT5h7ozsVtOw/rp92Mh2xZQdz0rXLVjsMaRc=",
 		"mod.json": "QVFbgQj92lsf+mAefsub/4x2geMWo61lNEuFi67Nb38=",
+		"node_modules/flatbuffers/js/flatbuffers.js": "i8i71yztavpSyvHyEodXC8TaAGhivix0YWs2m4/ylFw=",
+		"node_modules/flatbuffers/js/flatbuffers.mjs": "5z937IQQqf3NnIPmN6tpja7TVBCoz4nwMDnFv2nt+v8=",
+		"node_modules/flatbuffers/LICENSE.txt": "z8d0m5b2O9McPEK1xHG/dWgUBT6EfBDz6wA0F7xSPTA=",
+		"node_modules/flatbuffers/package.json": "KC5ev1b1eTgimGH+LmyjAEuY0EfVAvcmFey+cuAahgw=",
+		"node_modules/flatbuffers/readme.md": "d/1dw+4k7iouYiJCpnfNlKmbtt+kWtdlvpVLk8uf+No=",
 		"node_modules/ws/browser.js": "AQ2kSt3qHYiytzJUDD8f0MvLKJJrlmI9TGQiLg6tLQ4=",
 		"node_modules/ws/index.js": "wrDJkFVApRrLJ2UjuwJO88Eb0RiwOpDZKWIIDr0H/sk=",
 		"node_modules/ws/lib/buffer-util.js": "2iCI3PqEe+KyagxP1GSA4qeHsxILys65hVVlS7ulNjE=",
@@ -50,17 +58,17 @@
 		"node_modules/ws/LICENSE": "PeKEyOb6foQ37/b1NpVHHgMyEppbQqeTYeF7djfelLM=",
 		"node_modules/ws/package.json": "Zs1ya/U/ZiouEGW+91xFnWXN4kYgBQTn/jppVd9yOdA=",
 		"node_modules/ws/README.md": "QOBHWIg7f6A8jZAC2JYUJla5hS9dsPISulqoCkxIBmM=",
-		"package-lock.json": "/chEkc5eJ9d2RLH5OlwMUaYe8t8yDVUTl2GG4mpv3mk=",
-		"package.json": "5PqPWGH2hPqbFa15hN9zpFUTcpCfWyJgVUB5EmYReY4=",
-		"README.md": "2P6nzmKGBrXRs/9mWmbhiCEhwuKp6lH3lkXIwOcVH84=",
-		"savedData.json": "aeUpBLopjJwU1qnLuY92g10m3SydUptaNwr6017q0/8=",
+		"package-lock.json": "GhWFibqAsTcGzBzUM4UkdUqGbfWE/SPCum7lxbUuz8w=",
+		"package.json": "d1+O2CuQ0YXTJmSCPMNMTO0p6t92IsheniRgsXkxieU=",
+		"README.md": "MBFLrxcWrrBvzyWZXWJNCV4IfY7ZTmJ8JrcBA9DXc+o=",
+		"savedData.json": "fSY/WM5+JHlz+O14RYcukvmz30Dh12ox1NM9ShiYy7E=",
 		"src/.gitignore": "LDOYFGbm8ecc8mD3f92TCtdI81wFSZpWpPonlDE2ZUY=",
-		"src/package-lock.json": "f+RIXz80LajXJJiVQs+Em0Bka2J61QPt4wQX6azrpvE=",
-		"src/package.json": "jBmhPJ/ckyfhSS9cKe1Ff1WFUMSq3AeQNXnfgokqqQw=",
+		"src/package-lock.json": "Rmi18lbhitQYFJohlfdAfyAT4X97+fzoAk7ahFJA0Ec=",
+		"src/package.json": "iHStQG6YqPj6a/QNqXrw2tcWkz4wCe+TdxdPTbFPG+o=",
 		"src/public/clear.png": "EMi8lCG1yPUo9freoySoV86GeBe0DAq+0r/6gUYs5jU=",
 		"src/public/coherent.js": "bicG5AzEyWjkno/X7gXtCOsVj9WFyaPpdi1fNzbDAKg=",
 		"src/public/favicon.ico": "/u88R+ySYCcjyMBJb7iRZpFbeo0aAsRhhRvHemzVU9Y=",
-		"src/public/index.html": "09YNcLyBFPLpQurvwzm4JrLYDACLTEquu5ITM69HDIQ=",
+		"src/public/index.html": "70zEDA5sMhKQeDTI1nokbMzmNxZywCgY2o22+RoT/T8=",
 		"src/public/logo192.png": "w4Y5bscNs2CAdbX7+qxKscyqhroFpoqzk+xVHrZsPgA=",
 		"src/public/logo512.png": "nqT02nBQwMxAiSb2o5wlNiTpursdQ8eXfNghRFpgtGE=",
 		"src/public/manifest.json": "ULPYw5A68/eNhxuUVXqxT045yhkurKPSz6hjyGcnmhQ=",
@@ -69,25 +77,25 @@
 		"src/public/robots.txt": "kNJLw79pisHhc3OVAimMzKcq3x9WT6sF9IS4xI0crdI=",
 		"src/public/save.png": "uGSdZ937GVS1TOlr3ofEFgxJZpxES9vo5FYhNvk6jzw=",
 		"src/README.md": "kjvSqibZz8ID4E9Qm/HZtIFkemuef+5yuorTfk4SDLY=",
-		"src/src/App.css": "VRzYekRRhmFkM01QIdmOSmovw5Q3VJbJh8M0vvtHOmQ=",
+		"src/src/App.css": "thZ9vT6qwr4FqAZ7ZhYq+vaQ6civgUjqmYKLu1nQHFI=",
 		"src/src/App.js": "/ooH+OkJ2+v7XYgjpyhR02ns4k2IVLR+9VdMdiNE79g=",
 		"src/src/App.test.js": "ZxVAWNZ2VWMie9bUxmO3Pk7rPZcLERwMv2C0E0BYJsg=",
-		"src/src/Components/defview.js": "jdZoDO+tM4Fk600d5h0ZsBvBQEH575K9t1v0WViadDQ=",
-		"src/src/Components/filterpane.js": "/ibrJaRFwuSG9E6M/3cQUSf1iiqG9g2m910XRNDlU8U=",
-		"src/src/Components/hexview.js": "Wn7G7xu23KjijKRBZD0aWJAZIygramAC7srLZNAcFnU=",
-		"src/src/Components/logpane.js": "kiDgO3joqaYuq/+gRoC9XtP91ake0dWE2v2G0FXZTwE=",
+		"src/src/Components/defview.js": "6PHpy0XyaqFtSb2ifPvPodjNTBkqhQJTbiG/x6EawOQ=",
+		"src/src/Components/filterpane.js": "Lo/l2jtyoYlLqhl4eWPmnzpsQp8DjO0q6/iWdpt7rgY=",
+		"src/src/Components/hexview.js": "3QWJWdV0qm+LKfWFc0QaSvSljVw3CXwlA7gU6RAkqq4=",
+		"src/src/Components/logpane.js": "rcAfumbv3jZUYXc4pkF41I9kPWjCDy3F4YHfPH2NqV8=",
 		"src/src/Components/tableData.js": "qyedxU1x6I0XNsZgNuz+w25pywpB8COvWiJ70/Anmw8=",
 		"src/src/Components/windows/definition.js": "rPfagEWqIAsH6hi3rSmzohMALmqIumiLns3R8miUZEs=",
 		"src/src/Components/windows/hextool.js": "wP3Wt1whnGllQJqy9kq/ShRPsvLad0jV+ZISzgjagUA=",
 		"src/src/Components/windows/loadFilters.js": "crVDLbYP3YEJ9xgWEla+ee/swT9U1um3jAIfleNv7f8=",
-		"src/src/Components/windows/loadLog.js": "jPgytdxqNnZVYE/n+Z2i29YAgLCIjG2etfM7URbCJ30=",
+		"src/src/Components/windows/loadLog.js": "QE9GWSKBmE1dag0r7aqGtPdH2TW9FikhoRjwIqKd0aU=",
 		"src/src/Components/windows/saveFilters.js": "UX4cltUa+RHv1Dm50//zo5lvqrb7Ypnx+5wIarLdvRk=",
-		"src/src/Components/windows/saveLog.js": "O1RUmX2hITkBM2ZiI5VnzXNTeUeVj6JPcAxum81zv0U=",
+		"src/src/Components/windows/saveLog.js": "t7FuRu3Nl3EFf7H8IjMz1YcLZnspIB4RGVKYurmmybs=",
 		"src/src/index.css": "2vIsKWyAHT1TMIM2HMWfvcIuW/5SiqS60Zc7VMxUSKQ=",
 		"src/src/index.js": "E6ZcinssmrZ4gUk51B0HrHcF5gHKTEeGAb5B7Lmbtp0=",
-		"src/src/Layouts/main.js": "ahfGzUaCEKynywyYAHkMpWf9KaexutzEp+G5Gr0GRgA=",
+		"src/src/Layouts/main.js": "n7G+XfT0sfeMhgj2YC+T19pZq2NpJBn1GzQ+fx7un10=",
 		"src/src/serviceWorker.js": "fmmkZPWgBwIvXv0xOxWjeQ/q0asBq/ej8A5TzURWdvQ=",
 		"src/src/setupTests.js": "u2n1KIwkzX9TInaOIUCLbWmiWhawUuAFwfK011Nw+4A=",
-		"src/src/utils/api.js": "RF7ef3N0sTs/hD5GNWjLrE8na8CBKDvVfURr4ftkUls="
+		"src/src/utils/api.js": "Qe8F5R9dUKiCgeyy3qLxgz+IbUUwsT91sCdKyogfPvI="
 	}
 }
